--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <!-- Error messages-->
     <string name="detail_error_message">Sandwich data not available</string>
+    <string name="no_alternative_names">No alternative name(s)</string>
 
     <string-array name="sandwich_names">
         <item>Ham and cheese sandwich</item>
